--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,8 @@
 {
     "env": {
-      "browser": true
-    },
-    "globals": {
-      "it": true,
-      "expect": true
+      "browser": true,
+      "node": true,  // storybook
+      "jest": true
     },
     "parser": "babel-eslint",
     "ecmaFeatures": {
