--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "@kadira/storybook": "^2.35.3",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
-    "react-scripts": "0.9.5",
-    "eslint": "^3.19.0",
-    "eslint-plugin-react": "^6.10.3"
+    "react-scripts": "0.9.5"
   },
   "scripts": {
     "build-css": "node-sass src/ -o src/",
@@ -28,6 +29,8 @@
     "build": "npm run build-css && react-scripts build",
     "test": "npm run build-css && react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "node_modules/.bin/eslint src/*"
+    "lint": "eslint src/* stories/*",
+    "start-sb": "start-storybook -p 9001 -c .storybook",
+    "storybook": "npm-run-all -p watch-css start-sb"
   }
 }
