--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@kadira/storybook": "^2.35.3",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^6.10.3",
+    "fetch-mock": "^5.10.0",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "redux-mock-store": "^1.2.3"
   },
   "scripts": {
     "build-css": "node-sass src/ -o src/",
@@ -27,7 +29,7 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
-    "test": "npm run build-css && react-scripts test --env=jsdom",
+    "test": "npm run build-css && react-scripts test --env=jsdom --verbose",
     "eject": "react-scripts eject",
     "lint": "eslint src/* stories/*",
     "start-sb": "start-storybook -p 9001 -c .storybook",
