--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
     "react-scripts": "0.9.5",
-    "redux-mock-store": "^1.2.3"
+    "redux-mock-store": "^1.2.3",
+    "storyshots": "^3.2.2"
   },
   "scripts": {
     "build-css": "node-sass src/ -o src/",
