--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "npm-run-all": "^4.0.2",
     "react-scripts": "0.9.5",
     "redux-mock-store": "^1.2.3",
+    "storybook-router": "^0.1.1",
     "storyshots": "^3.2.2"
   },
   "scripts": {
