--- a/package.json
+++ b/package.json
@@ -7,27 +7,30 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-redux": "^5.0.4",
+    "react-redux": "5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.35.3",
+    "@storybook/addon-actions": "^3.0.0",
+    "@storybook/addon-links": "^3.0.0",
+    "@storybook/addon-storyshots": "^3.0.0",
+    "react-test-renderer": "^15.5.4",
+    "@storybook/react": "3.0.0",
     "eslint": "^3.19.0",
-    "eslint-plugin-react": "^7.0.0",
-    "fetch-mock": "^5.10.0",
-    "node-sass": "^4.5.2",
+    "eslint-plugin-react": "7.0.1",
+    "fetch-mock": "5.11.0",
+    "node-sass-chokidar": "^0.0.2",
     "npm-run-all": "^4.0.2",
-    "react-scripts": "0.9.5",
+    "react-scripts": "1.0.7",
     "redux-mock-store": "^1.2.3",
-    "storybook-router": "^0.2.3",
-    "storyshots": "^3.2.2"
+    "storybook-router": "^0.2.5"
   },
   "scripts": {
-    "build-css": "node-sass src/ -o src/",
-    "watch-css": "npm run build-css && node-sass src/ -o src/ --watch --recursive",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
