--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.0",
+    "react-dom": "^15.6.0",
     "react-redux": "5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
@@ -17,16 +17,16 @@
     "@storybook/addon-actions": "^3.0.0",
     "@storybook/addon-links": "^3.0.0",
     "@storybook/addon-storyshots": "^3.0.0",
-    "@storybook/react": "3.0.0",
-    "eslint": "^3.19.0",
-    "eslint-plugin-react": "7.0.1",
+    "@storybook/react": "^3.0.0",
+    "eslint": "^4.0.0",
+    "eslint-plugin-react": "^7.0.0",
     "fetch-mock": "5.11.0",
-    "node-sass-chokidar": "^0.0.2",
+    "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.0.2",
     "react-scripts": "1.0.7",
-    "react-test-renderer": "^15.5.4",
+    "react-test-renderer": "^15.6.0",
     "redux-mock-store": "^1.2.3",
-    "storybook-router": "^0.2.6"
+    "storybook-router": "^0.2.7"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
